--- a/possibility/class_note/ch01_0218.md
+++ b/possibility/class_note/ch01_0218.md
@@ -1,3 +1,5 @@
+<link href="https://cdn.bootcss.com/KaTeX/0.10.0/katex.min.css" rel="stylesheet"> <script src="https://cdn.bootcss.com/KaTeX/0.10.0/katex.min.js"></script>
+
 [TOC]
 
 # Chapter 01 随机事件与概率
