--- a/data_analysis/homework/hwch02_0308.md
+++ b/data_analysis/homework/hwch02_0308.md
@@ -16,7 +16,6 @@ $$
   = -0.620219
   $$
   
-
 * 二次
   $$
   f(x) = f(x_0) + f[x_0,x_1](x-x_0) + f[x_0,x_1,x_2](x-x_0)(x-x_1) \\
@@ -30,4 +29,43 @@ $$
 f(x) = f(x_0)+f[x_0,x_1](x-x_0)+R_1(x)  \\
 r = 0.5 * 10^{-5} + 0.5 * 10^{-5} + \frac{f''(\xi)}{2}(\frac{\pi}{2*10800})^2 \\
   = 0.1*10^{-4} + 1.06*10^{-8}
+$$
+
+
+
+**T6**
+
+(1) let $y=f(x)=x^k$
+
+$f(x) =  \sum_{j=0}^n x_j^k l_j(x) + R(x)$ , however the power is less than k, the Lagrange function should be determined as the only one. for i in range(0,n) $f(x_i) =  \sum_{j=0}^n x_j^k l_j(x_i)$ , which means $f(x)=x^k$ is one solotion. so that $R(x)=0$. $\sum_{j=0}^n x_j^k l_j(x)=x^k$
+
+(2)the left side could be expanded
+$$
+\sum_{j=0}^n (x_j-x)^kl_j(x)=\sum_{j=0}^nl_j(x)\sum_{i=0}^k C_k^ix_j^{k-i}(-x)^i  \\
+= \sum_{i=0}^kC_k^i(-x)^{i}\cdot\sum_{j=0}^n x_j^{k-i} l_j(x)  \\
+= \sum_{i=0}^kC_k^i(-x)^{i}\cdot x^{k-i} \ (from (1))  \\
+=(x-x)^k = 0
+$$
+
+
+**T8**
+$$
+R_2(x) = \frac{t(t-1)(t-2)}{6}h^3f^{(3)}(\xi) \\
+\leq \frac{2\sqrt{3}}{9}h^3\cdot e^4 \leq 10^{-6}  \\
+h \leq 0.006
+$$
+**T19**
+$$
+H_3(x) = y_0\alpha_0(x)+y_1\alpha_1(x)+y'_0\beta_0(x)+y'_1\beta_1(x) \\
+\alpha_0(x) = (1+2l_1(x))l_0^2(x) = (1+2x)(x-1)^2 \\
+\alpha_1(x) = (1+2l_0(x))l_1^2(x) = (3-2x)x^2 \\
+\beta_0(x) = (x-x_0)l_0^2(x) = x(x-1)^2 \\
+\beta_1(x) = (x-x_1)l_1^2(x) = (x-1)x^2 \\
+H_3(x) = \alpha_1(x)+\beta_1(x) = (2-x)x^2  \\
+part\ one\ of\ P(x)\ is\ above\\
+part\ 2\ H_4(x)\\
+H_4(0)=H_4'(0)=H_4(1)=H_4'(1)=0  \\
+let\ H_4(x)=ax^2(x-1)^2  \\
+H_4(2) = 1 \rightarrow a=\frac{1}{4} \\
+P(x) = (2-x)x^2+\frac{1}{4}x^2(x-1)^2 = \frac{1}{4}x^2(x-3)^2
 $$
