--- a/probability/class_note/ch02_0310.md
+++ b/probability/class_note/ch02_0310.md
@@ -17,8 +17,8 @@
 
     若随机变量 $X$ 的概率密度为
     $$
-    f(z) = \left\{ \begin{array}{rcl} \lambda e^{-\lambda x}& \mbox x > 0 \\
-    0 & \mbox x \leq 0\\ \end{array}\right.
+    f(z) = \left\{ \begin{array}{rcl} \lambda e^{-\lambda x}&  x > 0 \\
+    0 &  x \leq 0\\ \end{array}\right.
     $$
     则称 $X$ 在 $(a,b)$ 上服从参数为$\lambda (\lambda>0)$的指数分布
 
