--- a/data_analysis/homework/hwch07_0409.md
+++ b/data_analysis/homework/hwch07_0409.md
@@ -87,7 +87,7 @@
 
 **T12**
 
-no big difference between all the elements, so it is of no need to choose the max element.
+
 $$
 \left(
 \begin{array}{cc}
@@ -113,7 +113,134 @@ $$
  0 & 1/3&  1 & -8/3 &  0 & 1/3&  0 & -1 \\
 \end{array}
 \right) \\
+
+\left(
+\begin{array}{cc}
+ 1 &1/3 &  0 &  7/3 &  0 &1/3 &  0 &  0 \\
+ 0 & 1/3& 4/7& 1/21 &  0 &1/21&1/7 &  0 \\
+ 0 & 0  &25/7& 40/7 & -1 & 7/5& 1/7&  0 \\
+ 0 & 0  & 3/7&-19/7 &  0 & 2/7&-1/7& -1 \\
+\end{array}
+\right) \\
+
+\left(
+\begin{array}{cc}
+ 1 &1/3 &  0 &  7/3 &  0 &1/3 &  0 &  0 \\
+ 0 & 1/3& 4/7& 1/21 &  0 &1/21&1/7 &  0 \\
+ 0 & 0  &25/7& 40/7 & -1 & 7/5& 1/7&  0 \\
+ 0 & 0  &  0 &-17/5 &3/25& 1/5&-4/25& -1 \\
+\end{array}
+\right) \\
+
+\left(
+\begin{array}{cc}
+1   & 1/3 &  0  & 7/3 &  0  & 1/3 &  0  &  0  \\
+0   &   1 & 12/7& 1/7 &  0  & 1/7 & 3/7 &  0  \\
+0   &   0 &  1  & 8/5 &-7/25& 1/5 & 1/25&  0  \\
+0   &   0 &  0  &  1  &-3/85&-1/17& 4/85& 5/17\\
+\end{array}
+\right)\\
+
+\left(
+\begin{array}{cc}
+1   &   0 &  0  &  0  &- 4/85& 10/17&-23/85&-16/17 \\
+0   &   1 &  0  &  0  & 33/85&- 6/17& 41/85& 13/17\\
+0   &   0 &  1  &  0  &-19/85&  5/17&- 3/85&- 8/17\\
+0   &   0 &  0  &  1  &- 3/85&- 1/17&  4/85&  5/17\\
+\end{array}
+\right)\\
 $$
+
+
+
+
+
+**T13**
+$$
+U = \left( 
+		\begin{array}{cc}
+		 1  & -1/2&  0  &  0  &  0  \\
+		 0  &  1  & -2/3&  0  &  0  \\
+		 0  &  0  &  1  & -3/4&  0  \\
+		 0  &  0  &  0  &  1  & -4/5\\
+     0  &  0  &  0  &  0  &  1  \\
+		\end{array}
+		\right) \\
+
+
+y = \left( 
+		\begin{array}{cc}
+		1/2 \\
+		1/3 \\
+		1/4 \\
+		1/5 \\
+		1/6 \\
+		\end{array}
+		\right)
+		
+x = \left( 
+		\begin{array}{cc}
+		5/6 \\
+		2/3 \\
+		1/2 \\
+		1/3 \\
+		1/6 \\
+		\end{array}
+		\right)
+$$
+
+
+
+
+**T18**
+
+行范数 1.1
+
+列范数 0.8
+
+2范数 $\lambda_{MAX} = 0.68534$   $\sqrt{\lambda_{MAX}} = 0.827853$
+
+F范数 0.8426
+
+
+
+**T19**
+
+left:
+
+$||x||_1 = \sum_{i=1}^{i=n}|x_i| = |x|_{MAX} + (\sum_{i=1}^{i=n}|x_i| - |x|_{MAX}) $
+
+$\sum_{i=1}^{i=n}|x_i| - |x|_{MAX} \geq 0$
+
+$||x||_1 \geq |x|_{MAX} = |x|_{\infin}$ 
+
+right:
+
+$|x|_{MAX} \geq |x_i|$
+
+$ \sum_{i=1}^{i=n}|x_i| \leq n|x|_{MAX} $
+
+$\sum_{i=1}^{i=n}|x_i| \leq n||x||_{\infin}$
+
+
+
+**T31**
+
+(1) $cond(A)_2 = |\lambda_{MAX}/\lambda_{MIN}| = (\sqrt{\lambda_{MAX}(W^TW)/\lambda_{MIN}(W^TW)})^2 = cond(W)_2^2$ 
+
+(2) $cond(W^T)_2 = cond(W)_2$  $cond(A)_2 = cond(W^T)_2 cond(W)_2$
+
+
+
+**T32**
+
+$cond(I)_2 = cond(A^T)_2 cond(A)_2$
+
+$cond(I)_2 = 1$  $cond(A_T)_2 = cond(A)_2$
+
+$cond(A)_2 = 1$
+
+
 
 
 
