--- a/data_analysis/class_note/ch04_0429.md
+++ b/data_analysis/class_note/ch04_0429.md
@@ -46,6 +46,8 @@ $\omega(x) = (x-x_0)(x-x_1)...(x-x_n)$
 
 ## Section 02 Newton-Cotes 数值求积公式
 
+### 公式
+
 （等距节点拉格朗日插值）
 
 $x_k = a + kh, \ \ k=0,1,...n, \ \ h=\frac{b-a}{n}$
@@ -54,6 +56,8 @@ $I_n(f) = \sum_{k=0}^n A_k f(x_k)$
 
 $R(I_n) = \int_a^b R_n(x) dx$ 
 
+$x = a + th$
+
 $A_k = \int_a^b l_k(x)dx = \int_a^b \prod_{0\leq j \leq n\\j\neq k} \frac{x-x_j}{x_k-x_j}dx = \frac{h\cdot (-1)^{n-k}}{k!\cdot (n-k)!}\int_0^n \prod_{0\leq j \leq n\\j\neq k}(t-j)dt \\= (b-a)\frac{(-1)^{n-k}}{n\cdot k! \cdot (n-k)!}\int_0^n \prod_{0 \leq j \leq n \\ j\neq k}(t-j)dt \\ =(b-a)\cdot C_k^{(n)}$
 
 **计算公式：**  $I_n(f) = \sum_{k=0}^n A_k f(x_k) = (b-a)\sum_{k=0}^n C_k^{(n)}f(x_k)$ 
@@ -61,6 +65,177 @@ $A_k = \int_a^b l_k(x)dx = \int_a^b \prod_{0\leq j \leq n\\j\neq k} \frac{x-x_j}
 至少n次精度，n为偶数时n+1精度
 
   
+
+### 低阶公式及其余项
+
+#### 梯形公式
+
+$n=1, x_0=a, x_1=b, h=b-a$
+
+$C_0^{(1)} = -\int_0^1 (t-1)dt =\frac{1}{2}$
+
+$C_1^{(1)} = \int_0^1 tdt = \frac{1}{2}$
+
+$I_1(f) = (b-a)\sum_{k=0}^1 C_k^{(1)}f(x_k) = \frac{b-a}{2}[f(x_0)+f(x_1)]$
+
+$R_n(x) = \frac{f^{(n+1)}(\xi)}{(n+1)!}\omega_{n+1}(x)$
+
+$R(I_1) = \int_a^b R_1(x)dx \\ =\frac{f''(\eta)}{2}\int_a^b(x-a)(x-b)dx\\=-\frac{(b-a)^3}{12}f''(\eta)$
+
+
+
+#### Simpson 公式
+
+$n=2$
+
+$I_2(f) = \frac{b-a}{6}[f(a)+4f(\frac{a+b}{2})+f(b)]$
+
+$R(I_2) = =\frac{b-a}{180}(\frac{b-a}{2})^4 f^{(4)}(\eta)$ 
+
+
+
+#### Cotes 公式
+
+$n=4$
+
+$I_4(f) = (b-a)\sum_{k=0}^4 C_k^{(4)}f(x_k) \\ =\frac{b-a}{90}[7f(x_0)+32f(x_1)+12f(x_2)+32f(x_3)+7f(x_4)]$
+
+$R(I_4) = -\frac{2(b-a)}{945}(\frac{b-a}{4})^6 f^{(6)}(\eta)$
+
+
+
+## Section 03 复化求积公式
+
+### 复化梯形公式
+
+$\int_a^b f(x)dx = \frac{h}{2}[f(a)+2\sum_{k=1}^{n-1}f(x_k)+f(b)]$
+
+$R[f] = -\frac{h^2}{12}(b-a)\frac{\sum_{k=0}^{n-1}f''(\xi_k)}{n} = -\frac{h^2}{12}(b-a)f''(\xi)$
+
+
+
+### 复化Simpson公式
+
+$\int_a^b f(x)dx = \frac{h}{6}[f(a)+4\sum_{k=0}^{n-1}f(x_{k+\frac{1}{2}})+2\sum_{k=1}^{n-1}f(x_{k})+f(b)] $
+
+$R[f] = -\frac{b-a}{180}(\frac{h}{2})^4 f^{(4)}(\xi) = -\frac{1}{180}(\frac{h}{2})^4(f^{(3)}(b)-f^{(3)}(a))$ 
+
+
+
+### 复化Cotes公式
+
+...
+
+
+
+### p阶收敛
+
+若一个积分公式的误差满足 $\lim_{h\rightarrow 0} \frac{I-I_n}{h^p} = C < \infin$ ，则称该公式是p阶收敛的
+
+$T_n \sim O(h^2)$
+
+$S_n \sim O(h^4)$
+
+$C_n \sim O(h^6)$
+
+
+
+### 变步长(给定计算精度求n)
+
+$T_{2n} = \frac{1}{2}T_n + \frac{h}{2}\sum_{k=0}^{n-1}f(x_{k+\frac{1}{2}})$
+
+$R_{2n}[f] = \frac{1}{4}R_n[f] \ \ \ \ \rightarrow\ \ \ \ I-T_{2n}=\frac{1}{3}(T_{2n}-T_n)$
+
+
+
+### 龙贝格积分
+
+* 梯形
+
+  $\bar{T} = T_{2n} + (I-T_{2n}) = \frac{4}{3}T_{2n}-\frac{1}{3}T_n$ 用误差补偿得到 $S_{}$ Simpson的精度
+
+* Simpson
+
+  $\frac{16}{15}S_{2n}-\frac{1}{15}S_n = C_n$ 得到了cotes的精度 
+
+* Cotes  
+
+  $\frac{64}{63}C_{2n}-\frac{1}{63}C_n=R_n$ 得到了龙贝格的精度
+
+
+
+algorithm
+
+$\frac{4T_{2n}-T_n}{4-1} = S_n$
+
+$\frac{4^2 S_{2n}-S_n}{4^2 -1} = C_n$ 
+
+$\frac{4^3 C_{2n}-C_n}{4^3 -1} = R_n$ 
+
+
+
+| $T_1 = T_0^{(0)}$ |                   |                   |                   |
+| ----------------- | ----------------- | ----------------- | ----------------- |
+| $T_2 = T_0^{(1)}$ | $S_1 = T_1^{(0)}$ |                   |                   |
+| $T_4 = T_0^{(2)}$ | $S_2 = T_1^{(1)}$ | $C_1 = T_2^{(0)}$ |                   |
+| $T_8 = T_0^{(3)}$ | $S_4 = T_1^{(2)}$ | $C_2 = T_2^{(1)}$ | $R_1 = T_3^{(0)}$ |
+
+
+
+### Richardson逐次外推法加速
+
+|      | $T$         | $S$         | $C$         | $R$         |          |
+| ---- | ----------- | ----------- | ----------- | ----------- | -------- |
+| $k$  | $m=0$       | $m=1$       | $m=2$       | $m=3$       | $\cdots$ |
+| $0$  | $T_0^{(0)}$ | $T_1^{(0)}$ | $T_2^{(0)}$ | $T_3^{(0)}$ |          |
+| $1$  | $T_0^{(1)}$ | $T_1^{(1)}$ | $T_2^{(1)}$ |             |          |
+| $2$  | $T_0^{(2)}$ | $T_1^{(2)}$ |             |             |          |
+| $3$  | $T_0^{(4)}$ |             |             |             |          |
+
+
+
+$T_m^{(k)} = \frac{4^m T_{m-1}^{k+1} - T_{m-1}^{(k)}}{4^m - 1}$
+
+Stop when $|T_m^{(0)} - T_{m-1}^{(0)}|<\varepsilon$
+
+
+
+## Section 04 高斯型求积公式
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+  
+
+  
+
+  
+
+  
+
+  
+
+
+
+
+
+
+
 
 
 
