--- a/data_analysis/class_note/ch05_0513.md
+++ b/data_analysis/class_note/ch05_0513.md
@@ -18,21 +18,98 @@
 
   $y' = f \equiv f^{(0)}$ 
 
-  $y'' = \frac{\part f^{(0)}}{\part x} + f \frac{\part f^{(0)}}{\part y} \equiv f^{(1)}$ 
+  $y'' = \frac{\partial f^{(0)}}{\partial x} + f \frac{\partial f^{(0)}}{\partial y} \equiv f^{(1)}$ 
 
-  $y''' = \frac{\part f^{(1)}}{\part x} + f \frac{\part f^{(1)}}{\part y} \equiv f^{(2)}$
+  $y''' = \frac{\partial f^{(1)}}{\partial x} + f \frac{\partial f^{(1)}}{\partial y} \equiv f^{(2)}$
 
-  $y^{(j)} = \frac{\part f^{(j-2)}}{\part x} + f \frac{\part f^{(j-2)}}{\part y} \equiv f^{(j-1)}$  
+  $y^{(j)} = \frac{\partial f^{(j-2)}}{\partial x} + f \frac{\partial f^{(j-2)}}{\partial y} \equiv f^{(j-1)}$  
 
   $\left\{\begin{array}{cc} y_{n+1} = y_n + h\phi(x_n,y_n,h) \\ y_0 = \eta \end{array}\right.$
 
-  p=1 退化为欧拉方法 $R_n = \frac{1}{2}h^2 y''(\xi) = O(h^2)$ 
+  p=1 
 
-  p=2 $y_{n+1} = y_n + h[f(x_n, y_n)+\frac{h}{2}f'(x_n,y_n)]$ ,
+  退化为欧拉方法 $R_n = \frac{1}{2}h^2 y''(\xi) = O(h^2)$ 
 
-  ​	   $f'(x_n,y_n)=f'_x(x_n,y_n)+f'_y(x_n,y_n)f(x_n,y_n)$ 
+  p=2 
 
-     	$R_n = \frac{1}{3!}h^3 y'''(\xi) = O(h^3)$ 
+  $y_{n+1} = y_n + h[f(x_n, y_n)+\frac{h}{2}f'(x_n,y_n)]$ ,
+  
+  $f'(x_n,y_n)=f'_x(x_n,y_n)+f'_y(x_n,y_n)f(x_n,y_n)$ 
+  
+  $R_n = \frac{1}{3!}h^3 y'''(\xi) = O(h^3)$ 
+  
+  
+  
+* 数值积分法
+
+  $y(x_{n+1}) = y(x_n) + \int_{x_n}^{x_{n+1}}f(x,y(x))dx$
+
+  - 使用矩形公式（左矩形）
+
+    $y_{n+1} = y_n + hf(x_n, y_n)$ 为欧拉方法
+
+  - 使用矩形公式（右矩形）
+
+    $y_{n+1} = y_n + hf(x_{n+1}, y_{n+1})$ 为后退欧拉方法 
+
+  - 使用梯形方法
+
+    $\int_{x_n}^{x_{n+1}}f(x,y(x))dx = \frac{h}{2}[f(x_n, y(x_n)) + f(x_{n+1},y(x_{n+1}))]$
+
+    $y_{n+1} = y_n + \frac{h}{2}[f(x_n, y_n) + f(x_{n+1}, y_{n+1})]$
+
+  
+
+### 局部截断误差
+
+由认为准确的$y_n = y_n(x)$ 用数值方法计算 $y_{n+1}$,  $y(x_{n+1})-y_{n+1}$  称为局部截断误差
+
+| 已有结果     | 局部截断误差 |
+| ------------ | ------------ |
+| 欧拉方法     | $O(h^2)$     |
+| 后退欧拉方法 | $ O(h^2) $   |
+| 两步欧拉方法 | $ O(h^3) $   |
+| 梯形方法     | $ O(h^3) $   |
+
+​    
+
+### 整体截断误差
+
+| 已有结果     | 局部截断误差 |
+| ------------ | ------------ |
+| 欧拉方法     | $O(h)$       |
+| 后退欧拉方法 | $ O(h) $     |
+| 两步欧拉方法 | $ O(h^2) $   |
+| 梯形方法     | $ O(h^2) $   |
+
+若数值方法整体截断误差的阶为 $ O(h^p) $,则称该数值方法的阶为 $p$     
+
+
+
+### 具体梯形求解方法
+
+迭代方法：
+由 $y_n$ 求 $y_{n+1}$ 时，先选定 $y_{n+1}$ 的初值 $y_{n+1}^{(0)}$ 然后迭代：$y_{n+1}^{(k+1)} = y_n + \frac{h}{2}[f(x_n, y_n) + f(x_{n+1}, y_{n+1}^{(k)})]$ , 当 $ |y_{n+1}^{(k+1)} - y_{n+1}^{(k)}| < \varepsilon $ 则有 $y_{n+1}^{(k+1)} \approx y_{n+1}$ 
+
+改进：
+
+用欧拉方法求 $y_{n+1}^{(0)} = y_n + hf(x_n,y_n)$ ,  $y_{n+1} = y_n +\frac{h}{2}[f(x_n, y_n)+f(x_{n+1},y_{n+1}^{(0)})]$ 
+
+即 $y_{n+1} = y_n + \frac{h}{2}[f(x_n,y_n)+f(x_n+h, y_n + hf(x_n,y_n))]$ 
+
+
+
+
+
+​    
+
+​    
+
+​    
+
+​    
+
+​    
 
 
 
