--- a/probability/class_note/ch01_0218.md
+++ b/probability/class_note/ch01_0218.md
@@ -18,45 +18,37 @@ title: 'Chapter 01 随机事件与概率'
 ### 事件关系：
 
 * 包含关系
-
+  
   $A \subset B$  : $B$ 发生必然导致 $A$ 发生
-
 * 互不相容关系
-
 * 相等关系
-
-  $B \subset A$  and $B \supset A$  --> $B=A$ 
+  
+  $B \subset A$  and $B \supset A$  --> $B=A$
 
 ### 事件运算：
 
 * 事件的并
-
+  
   $ \bigcup_{i=1}^n A_i $
-
 * 事件的交
-
+  
   $\bigcap_{i=1}^n A_i$ or  $A_1A_2...A_n$
-
 * 事件的差
-
+  
   $A-B$ : $A$ 发生而 $B$ 不发生的事件
-
 * 对立事件
-
+  
   $\bar{A}$  : $A$ 不发生的事件
 
 ### 运算律
 
 * $A \cup B = B\cup A$ ,  $A \cap B = B \cap A$
-
 * $(A \cup B) \cup C = A \cup (B \cup C)$ ,  $(A \cap B) \cap C = A \cap (B \cap C)$
-
-* $A \cup (B \cap C) = (A \cup B) \cap (A \cup C)$ ,  $A \cap (B \cup C) = (A \cap B) \cup (A \cap C)$ 
-
+* $A \cup (B \cap C) = (A \cup B) \cap (A \cup C)$ ,  $A \cap (B \cup C) = (A \cap B) \cup (A \cap C)$
 * $\overline{A \cup B} = \bar{A} \cap \bar{B}$ ,  $\overline{A \cap B} = \bar{A} \cup \bar{B}$
-
+  
   $\overline{A_1 \cup A_2 \cup A_3... \cup A_n} = \bar{A_1} \cap \bar{A_2} \cap \bar{A_3}...\cap \bar{A_n}$
-
+  
   $\overline{A_1 \cap A_2 \cap A_3... \cap A_n} = \bar{A_1} \cup \bar{A_2} \cup \bar{A_3}...\cup \bar{A_n}$
 
 ## Section 02 事件的概率及其性质
@@ -69,39 +61,49 @@ title: 'Chapter 01 随机事件与概率'
 * $f_n(\Omega) = 1$
 * $f_n(\bigcup_{i=1}^n A_i) = \bigcup_{i=1}^n f_n(A_i) $
 
-
-
 ### 概率
 
-#### $Def\ 1.1:$ 
+$Def\ 1.1:$
 
-​	设$ E $为随机试验，$ \Omega $为其样本空间。对于$ E $的每一个随机事件$ A $，对应一个实数$ P(A) $，如果集合函数$ P(\cdot) $满足：
+设 $ E $为随机试验，$ \Omega $为其样本空间。对于$ E $的每一个随机事件$ A $，对应一个实数$ P(A) $，如果集合函数$ P(\cdot) $满足：
 
-​	(1) 非负性 $P(A) \geq 0$
+```
+(1) 非负性
+```
 
-​	(2)规范性 $P(\Omega) = 1$
+$P(A) \geq 0$
 
-​	(3)可列可加性 若 $A_1,A_2,A_3...A_n...$ 两两互不相容，则$ P(\bigcup_{i=1}^{\infin}A_i) = \bigcup_{i=1}^{\infin}P(A_i) $
+```
+(2)规范性
+```
 
-​	则称p为事件A的概率
+$P(\Omega) = 1$
+
+```
+(3)可列可加性 若
+```
+
+$A_1,A_2,A_3...A_n...$ 两两互不相容，则$ P(\bigcup_{i=1}^{\infin}A_i) = \bigcup_{i=1}^{\infin}P(A_i) $
+
+```
+则称 p 为事件 A 的概率
+```
 
 #### 性质
 
 * $ P(\Phi) = 0 $
-
+  
   $ P(\Phi)=P(\Phi+\Phi+\Phi+...)=P(\Phi)+P(\Phi)+P(\Phi)+... $
-
 * 若 $A_1,A_2,A_3...A_n$ 两两互不相容，则 $P(\bigcup_{i=1}^n A_i) = \bigcup_{i=1}^n P(A_i) $
-
+  
   由(3)取 $ A_{n+1}=A_{n+2}=...=\Phi $
-
 * $P(A-B) = P(A) - P(AB)$
-
 * 加法定理：$P(A \cup B) = P(A) + P(B) - P(AB)$
-
+  
   推广到$ n $个事件：
+  
   $$
   P \left( \bigcup_{i=1}^nA_i\right) = \sum_{i=1}^n P(A_i) - \sum_{1\leq i <j \leq n} P(A_iA_j) + \sum_{1 \leq i < j < k \leq n} P(A_iA_jA_k) + ... + (-1)^{n-1}P(A_1A_2A_3...A_n)
   $$
-  
 * $ P(\bar{A}) = 1 - P(A) $
+
